--- a/documents/css/app.css
+++ b/documents/css/app.css
@@ -71,10 +71,6 @@ h2.large-h2 {
     /* letter-spacing: -0.09em; */
 }
 
-.companyDocViewer {
-    overflow: auto;
-}
-
 .subnav-controls.flush-controls {
     margin-bottom: 0px;
 }
